syntax = "proto3";
option go_package = "github.com/sacloud/autoscaler/handler";

package autoscaler;

service HandleService {
  rpc Handle(HandleRequest) returns (stream HandleResponse);
}

message HandleRequest {
  // Inputから引き渡し
  string source              = 1;
  string action              = 2;
  string resource_group_name = 3;

  // Coreからの指示情報
  string scaling_job_id       = 4;
  repeated Resource resources = 5;
}

message HandleResponse {
  enum Status {
    UNKNOWN         = 0;
    ACCEPTED        = 1;
    RUNNING         = 2;
    DONE            = 3;
    CANCELED        = 4;
    FAILED          = 5;
  }

  string scaling_job_id   = 1;
  Status status = 2;
  string log    = 3; // stdout & stderr
}

// Handlersが対象リソースをどう扱うべきかを示す
enum ResourceInstructions {
  UNKNOWN      = 0;
  CREATE       = 1;
  UPDATE       = 2;
  DELETE       = 3;
  NOOP         = 4; // 特に変更の必要がない状態を示す。参照用のリソースなどで利用される。
}

// リソース型
// TODO ネスとしたリソースへの対応
message Resource {
  oneof resource {
    Server server            = 10;
    ServerGroup server_group = 11;
    ELB elb                  = 12;
    GSLB gslb                = 13;
    DNS dns                  = 14;
  }
}

message Server {
  ResourceInstructions instruction      = 1;
  string id                             = 2;
  string zone                           = 3;
  uint32 core                           = 4;
  uint32 memory                         = 5;
  bool dedicated_cpu                    = 6;
  string private_host_id                = 7;
  repeated NetworkInfo assigned_network = 8;
  // TODO その他渡すパラメータを整理する
}

message ServerGroup {
  repeated Server servers   = 1;
  repeated Wrapper wrappers = 2;
}

message Wrapper {
  repeated Wrapper children = 1;
  reserved 2 to 9;

  oneof wrapper {
    ELB elb   = 10;
    GSLB gslb = 11;
    DNS dns   = 12;
  }
}

message ELB {
  ResourceInstructions instruction = 1;
  string id                        = 2;
  uint32 plan                      = 3;
  string virtual_ip_address        = 4;
  string fqdn                      = 5;
  // TODO その他渡すパラメータを整理
}

message GSLB {
  ResourceInstructions instruction = 1;
  string id                        = 2;
  string fqdn                      = 3;
}

message DNS {
  ResourceInstructions instruction = 1;
  string id                        = 2;
  string zone                      = 3;
}

message NetworkInfo {
  string ip_address = 1;
  uint32 netmask = 2;
  string gateway = 3;
}